--- a/interiores_2.html
+++ b/interiores_2.html
@@ -1,214 +1,175 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en-US">
 
 <head>
-
     <!-- Meta -->
-    <meta charset="UTF-8">
-    <title>PACIFICA | Lifestyle</title>
-    <meta name="keywords" content="Pacifica, Arquitectura, Ezequiel Gil">
-    <meta name="description" content="Pacifica - Estudio de Arquitectura">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta charset="UTF-8" />
+    <title>PACIFICA | Diseño de Interiores</title>
+    <meta name="keywords" content="Pacifica, Arquitectura, Ezequiel Gil" />
+    <meta name="description" content="Pacifica - Estudio de Arquitectura" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="manifest" href="/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
+    <link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png" />
+    <link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="apple-icon-76x76.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="apple-icon-114x114.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="apple-icon-120x120.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="apple-icon-144x144.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="apple-icon-152x152.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180x180.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="android-icon-192x192.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
+    <meta name="theme-color" content="#ffffff" />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700|Oswald:400" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/font-awesome.min.css" />
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700|Oswald:400" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="css/idangerous.swiper.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.1/photoswipe.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.1/default-skin/default-skin.min.css">
-    <link rel="stylesheet" href="css/style.css">
-
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
-
-
     <!-- Overlay -->
     <div id="overlay"></div>
 
     <!-- Top header -->
     <div id="top">
-
         <!-- Sidebar button -->
         <a href="#" id="sidebar-button"></a>
 
         <!-- Logo -->
         <header id="logo">
-            <a href="index.html"><img src="img/logo.png" alt=""></a>
+            <a href="index.html"><img src="img/logo.png" alt="" /></a>
             <!-- <h1>Pacifica</h1>
 				<h2>Ezequiel Gil <strong>Arquitecto</strong></h2> -->
         </header>
 
         <!-- Portfolio close button -->
         <a href="#" id="portfolio-close"></a>
-
     </div>
 
     <!-- Main wrapper -->
     <div id="main-wrapper">
-
         <!-- Content -->
         <div id="content" class="isotope-container">
-
             <!-- Fluid container -->
             <div class="container">
-
                 <!-- Page heading -->
                 <div id="heading" class="row">
                     <div class="filter col-12">
-
                         <header>
-                            <h1>Lifestyle</h1>
-                            <h2></h2>
+                            <h1>Diseño de Interiores</h1>
+                            <h2>Verónica Jijena Sánchez</h2>
                         </header>
-
-
                     </div>
                 </div>
 
                 <!-- Main content -->
-
                 <div class="grid-gallery" itemscope>
 
                     <div class="col-gallery">
                         <figure itemprop="associatedMedia" itemscope>
-                            <a href="./img/lifestyle/ls_01.jpg" data-size="600x300">
-                                <img src="./img/lifestyle/ls_01.jpg" itempropo alt="">
+                            <a href="./img/interiores/di_01.jpg" data-size="600x300">
+                                <img src="./img/interiores/di_01.jpg" itempropo alt="">
                             </a>
                         </figure>
                         <figure itemprop="associatedMedia" itemscope>
-                            <a href="./img/lifestyle/ls_02.jpg" data-size="600x900">
-                                <img src="./img/lifestyle/ls_02.jpg" itempropo alt="">
+                            <a href="./img/interiores/di_02.jpg" data-size="600x300">
+                                <img src="./img/interiores/di_02.jpg" itempropo alt="">
                             </a>
                         </figure>
                         <figure itemprop="associatedMedia" itemscope>
-                            <a href="./img/lifestyle/ls_03.jpg" data-size="600x600">
-                                <img src="./img/lifestyle/ls_03.jpg" itempropo alt="">
+                            <a href="./img/interiores/di_03.jpg" data-size="600x300">
+                                <img src="./img/interiores/di_03.jpg" itempropo alt="">
                             </a>
                         </figure>
                         <figure itemprop="associatedMedia" itemscope>
-                            <a href="./img/lifestyle/ls_04.jpg" data-size="600x600">
-                                <img src="./img/lifestyle/ls_04.jpg" itempropo alt="">
-                            </a>
-                        </figure>
-                        <figure itemprop="associatedMedia" itemscope>
-                            <a href="./img/lifestyle/ls_05.jpg" data-size="600x300">
-                                <img src="./img/lifestyle/ls_05.jpg" itempropo alt="">
-                            </a>
-                        </figure>
-                        <figure itemprop="associatedMedia" itemscope>
-                            <a href="./img/lifestyle/ls_06.jpg" data-size="600x600">
-                                <img src="./img/lifestyle/ls_06.jpg" itempropo alt="">
+                            <a href="./img/interiores/di_04.jpg" data-size="600x300">
+                                <img src="./img/interiores/di_04.jpg" itempropo alt="">
                             </a>
                         </figure>
                     </div>
                     <div class="col-gallery">
                         <figure itemprop="associatedMedia" itemscope>
-                            <a href="./img/lifestyle/ls_07.jpg" data-size="600x600">
-                                <img src="./img/lifestyle/ls_07.jpg" itempropo alt="">
+                            <a href="./img/interiores/di_07.jpg" data-size="600x300">
+                                <img src="./img/interiores/di_07.jpg" itempropo alt="">
                             </a>
                         </figure>
                         <figure itemprop="associatedMedia" itemscope>
-                            <a href="./img/lifestyle/ls_08.jpg" data-size="600x300">
-                                <img src="./img/lifestyle/ls_08.jpg" itempropo alt="">
+                            <a href="./img/interiores/di_08.jpg" data-size="600x300">
+                                <img src="./img/interiores/di_08.jpg" itempropo alt="">
                             </a>
                         </figure>
                         <figure itemprop="associatedMedia" itemscope>
-                            <a href="./img/lifestyle/ls_09.jpg" data-size="600x600">
-                                <img src="./img/lifestyle/ls_09.jpg" itempropo alt="">
+                            <a href="./img/interiores/di_09.jpg" data-size="600x300">
+                                <img src="./img/interiores/di_09.jpg" itempropo alt="">
                             </a>
                         </figure>
                         <figure itemprop="associatedMedia" itemscope>
-                            <a href="./img/lifestyle/ls_10.jpg" data-size="600x600">
-                                <img src="./img/lifestyle/ls_10.jpg" itempropo alt="">
-                            </a>
-                        </figure>
-                        <figure itemprop="associatedMedia" itemscope>
-                            <a href="./img/lifestyle/ls_11.jpg" data-size="600x900">
-                                <img src="./img/lifestyle/ls_11.jpg" itempropo alt="">
-                            </a>
-                        </figure>
-                        <figure itemprop="associatedMedia" itemscope>
-                            <a href="./img/lifestyle/ls_12.jpg" data-size="600x300">
-                                <img src="./img/lifestyle/ls_12.jpg" itempropo alt="">
+                            <a href="./img/interiores/di_10.jpg" data-size="600x300">
+                                <img src="./img/interiores/di_10.jpg" itempropo alt="">
                             </a>
                         </figure>
                     </div>
                     <div class="col-gallery">
                         <figure itemprop="associatedMedia" itemscope>
-                            <a href="./img/lifestyle/ls_13.jpg" data-size="600x900">
-                                <img src="./img/lifestyle/ls_13.jpg" itempropo alt="">
+                            <a href="./img/interiores/di_13.jpg" data-size="600x300">
+                                <img src="./img/interiores/di_13.jpg" itempropo alt="">
                             </a>
                         </figure>
                         <figure itemprop="associatedMedia" itemscope>
-                            <a href="./img/lifestyle/ls_14.jpg" data-size="600x600">
-                                <img src="./img/lifestyle/ls_14.jpg" itempropo alt="">
+                            <a href="./img/interiores/di_14.jpg" data-size="600x300">
+                                <img src="./img/interiores/di_14.jpg" itempropo alt="">
                             </a>
                         </figure>
                         <figure itemprop="associatedMedia" itemscope>
-                            <a href="./img/lifestyle/ls_15.jpg" data-size="600x300">
-                                <img src="./img/lifestyle/ls_15.jpg" itempropo alt="">
+                            <a href="./img/interiores/di_15.jpg" data-size="600x300">
+                                <img src="./img/interiores/di_15.jpg" itempropo alt="">
                             </a>
                         </figure>
                         <figure itemprop="associatedMedia" itemscope>
-                            <a href="./img/lifestyle/ls_16.jpg" data-size="600x300">
-                                <img src="./img/lifestyle/ls_16.jpg" itempropo alt="">
-                            </a>
-                        </figure>
-                        <figure itemprop="associatedMedia" itemscope>
-                            <a href="./img/lifestyle/ls_17.jpg" data-size="600x300">
-                                <img src="./img/lifestyle/ls_17.jpg" itempropo alt="">
-                            </a>
-                        </figure>
-                        <figure itemprop="associatedMedia" itemscope>
-                            <a href="./img/lifestyle/ls_18.jpg" data-size="600x900">
-                                <img src="./img/lifestyle/ls_18.jpg" itempropo alt="">
+                            <a href="./img/interiores/di_16.jpg" data-size="600x300">
+                                <img src="./img/interiores/di_16.jpg" itempropo alt="">
                             </a>
                         </figure>
                     </div>
-
                 </div>
 
-
+                <!-- Pagination -->
+                <div class="pagination-row row">
+                    <div class="col-12">
+                        <ul class="pag">
+                            <li><a href="#">Ver m&aacute;s</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-
         </div>
 
         <!-- Collapsible sidebar -->
         <div id="sidebar">
-
             <!-- Widget Area -->
             <div id="widgets">
-
                 <!-- Main menu -->
                 <nav id="mainmenu">
                     <ul>
                         <li><a href="portfolio.html">Casas</a></li>
                         <li><a href="lifestyle.html">Lifestyle</a></li>
                         <li><a href="desarrollos.html">Desarrollos</a></li>
-                        <li><a href="#">El Estudio</a>
+                        <li>
+                            <a href="#">El Estudio</a>
                             <ul>
                                 <li><a href="quienesomos.html">Quienes Somos</a></li>
                                 <li><a href="estudio.html">Fotos</a></li>
@@ -217,24 +178,20 @@
                         <li><a href="interiores.html">Diseño de Interiores</a></li>
                         <li><a href="contacto.html">Contacto</a></li>
                         <li><a href="instagram.html">Instagram</a></li>
-
                     </ul>
                 </nav>
-
             </div>
 
             <!-- Copyright -->
             <div>
                 <p class="copyright">© Copyright 2018 Pacifica</p>
             </div>
-
         </div>
-
     </div>
     <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
 
         <!-- Background of PhotoSwipe. 
-         It's a separate element, as animating opacity is faster than rgba(). -->
+             It's a separate element, as animating opacity is faster than rgba(). -->
         <div class="pswp__bg"></div>
 
         <!-- Slides wrapper with overflow:hidden. -->
@@ -295,8 +252,6 @@
         </div>
 
     </div>
-
-
     <footer class="footer-section">
         <div class="container">
             <div class="row">
@@ -345,7 +300,9 @@
                                         <li><a href="desarrollos.html">Desarrollos</a></li>
                                         <li><a href="quienesomos.html">Quienes Somos</a></li>
                                         <li><a href="estudio.html">Fotos</a></li>
-                                        <li><a href="interiores.html">Diseño de Interiores</a></li>
+                                        <li>
+                                            <a href="interiores.html">Diseño de Interiores</a>
+                                        </li>
                                         <li><a href="contacto.html">Contacto</a></li>
                                         <li><a href="instagram.html">Instagram</a></li>
                                     </ul>
@@ -364,7 +321,6 @@
                         </div>
                     </div>
                 </div>
-
             </div>
             <div class="sub-footer">
                 <div class="copyright-text">
@@ -377,22 +333,18 @@
                 </div>
             </div>
         </div>
-
     </footer>
 
     <!-- JavaScripts -->
-    <script type='text/javascript' src='js/jquery.min.js'></script>
-    <script type='text/javascript' src='js/bootstrap.min.js'></script>
-    <script type='text/javascript' src='js/masonry/masonry.pkgd.min.js'></script>
-    <script src="js/swiper/idangerous.swiper.min.js"></script>
-    <script src="js/isotope/jquery.isotope.min.js"></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/swiper/idangerous.swiper.min.js"></script>
+    <script type="text/javascript" src="js/masonry/masonry.pkgd.min.js"></script>
+    <script type="text/javascript" src="js/isotope/jquery.isotope.min.js"></script>
     <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.1/photoswipe.min.js"></script>
     <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.1/photoswipe-ui-default.min.js"></script>
-    <script type='text/javascript' src='js/custom.js'></script>
-    <script type='text/javascript' src='js/ps.js'></script>
-
-
-
+    <script type="text/javascript" src="js/custom.js"></script>
+    <script type="text/javascript" src="js/ps.js"></script>
 </body>
 
 </html>
