--- a/portfolio.html
+++ b/portfolio.html
@@ -57,42 +57,42 @@
 			<a href="index.html"><img src="img/logo.png" alt=""></a>
 			<!-- <h1>Pacifica</h1>
 				<h2>Ezequiel Gil <strong>Arquitecto</strong></h2> -->
-		</header>	
+		</header>
 
 	</div>
-<!-- Collapsible sidebar -->
-<div id="sidebar">
+	<!-- Collapsible sidebar -->
+	<div id="sidebar">
 
-	<!-- Widget Area -->
-	<div id="widgets">
+		<!-- Widget Area -->
+		<div id="widgets">
 
-		<!-- Main menu -->
-		<nav id="mainmenu">
-			<ul>
-				<li><a href="portfolio.html">Casas</a></li>
-				<li><a href="lifestyle_2.html">Lifestyle</a></li>
-				<li><a href="desarrollos.html">Desarrollos</a></li>
-				<li><a href="#">El Estudio</a>
-					<ul>
-						<li><a href="quienesomos.html">Quienes Somos</a></li>
-						<li><a href="estudio.html">Fotos</a></li>
-					</ul>
-				</li>
-				<li><a href="interiores.html">Diseño de Interiores</a></li>
-				<li><a href="contacto.html">Contacto</a></li>
-				<li><a href="instagram.html">Instagram</a></li>
+			<!-- Main menu -->
+			<nav id="mainmenu">
+				<ul>
+					<li><a href="portfolio.html">Casas</a></li>
+					<li><a href="lifestyle_2.html">Lifestyle</a></li>
+					<li><a href="desarrollos.html">Desarrollos</a></li>
+					<li><a href="#">El Estudio</a>
+						<ul>
+							<li><a href="quienesomos.html">Quienes Somos</a></li>
+							<li><a href="estudio.html">Fotos</a></li>
+						</ul>
+					</li>
+					<li><a href="interiores.html">Diseño de Interiores</a></li>
+					<li><a href="contacto.html">Contacto</a></li>
+					<li><a href="instagram.html">Instagram</a></li>
 
-			</ul>
-		</nav>
+				</ul>
+			</nav>
+
+		</div>
+
+		<!-- Copyright -->
+		<div>
+			<p class="copyright">© Copyright 2018 Pacifica</p>
+		</div>
 
 	</div>
-
-	<!-- Copyright -->
-	<div>
-		<p class="copyright">© Copyright 2018 Pacifica</p>
-	</div>
-
-</div>
 
 	<!-- Main wrapper -->
 	<div id="main-wrapper">
@@ -105,10 +105,10 @@
 
 				<!-- Page heading -->
 
-						<header id="heading">
-							<h1>Casas</h1>
-							<h2></h2>
-						</header>
+				<header id="heading">
+					<h1>Casas</h1>
+					<h2></h2>
+				</header>
 
 
 				<!-- Main content -->
@@ -290,7 +290,7 @@
 						<a href="" class="image" style="background-image: url(img/casas/fly_cat.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
-								<h3 class="content-title">FLY CAT</h3>
+								<h3 class="content-title">FLY CAST</h3>
 							</div>
 						</a>
 					</article>
@@ -330,7 +330,7 @@
 						<a href="" class="image" style="background-image: url(img/casas/hut_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
-								<h3 class="content-title">CINCO FUEGOS</h3>
+								<h3 class="content-title">HUT HOUSE</h3>
 							</div>
 						</a>
 					</article>
@@ -384,61 +384,61 @@
 			</div>
 
 		</div>
-<footer class="footer-section">
-	<div class="container">
-		<div class="row">
-			<div class="col-xs-12 col-sm-5">
-				<div class="footer-cta">
-					<div class="footer-widget-heading">
-						<h3>Pacífica</h3>
-					</div>
-					<div class="single-cta">
-						<i class="fa fa-map-marker"></i>
-						<div class="cta-text">
-							<span>Sucre 1767 Of. 10 - 1º, San Isidro</span>
-						</div>
-					</div>
-					<div class="single-cta">
-						<i class="fa fa-phone"></i>
-						<div class="cta-text">
-							<span>4737.0086</span>
-						</div>
-					</div>
-					<div class="single-cta">
-						<i class="fa fa-envelope"></i>
-						<div class="cta-text">
-							<span><a href="mailto:estudio@pacificaarquitectura.com"></a>estudio@pacificaarquitectura.com</span>
-						</div>
-					</div>
-					<div class="single-cta">
-						<i class="fa fa-instagram"></i>
-						<div class="cta-text">
-							<span><a href="https://www.instagram.com/arq.ezequielgil/"></a>@arq.ezequielgil</span>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col-xs-12 col-sm-7">
-				<div class="footer-content">
-					<div class="row">
-						<div class="col-xs-12">
-							<div class="footer-widget">
-								<div class="footer-widget-heading">
-									<h3>Sitio</h3>
+		<footer class="footer-section">
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-12 col-sm-5">
+						<div class="footer-cta">
+							<div class="footer-widget-heading">
+								<h3>Pacífica</h3>
+							</div>
+							<div class="single-cta">
+								<i class="fa fa-map-marker"></i>
+								<div class="cta-text">
+									<span>Sucre 1767 Of. 10 - 1º, San Isidro</span>
 								</div>
-								<ul>
-									<li><a href="portfolio.html">Casas</a></li>
-									<li><a href="lifestyle.html">Lifestyle</a></li>
-									<li><a href="desarrollos.html">Desarrollos</a></li>
-									<li><a href="quienesomos.html">Quienes Somos</a></li>
-									<li><a href="estudio.html">Fotos</a></li>
-									<li><a href="interiores.html">Diseño de Interiores</a></li>
-									<li><a href="contacto.html">Contacto</a></li>
-									<li><a href="instagram.html">Instagram</a></li>
-								</ul>
+							</div>
+							<div class="single-cta">
+								<i class="fa fa-phone"></i>
+								<div class="cta-text">
+									<span>4737.0086</span>
+								</div>
+							</div>
+							<div class="single-cta">
+								<i class="fa fa-envelope"></i>
+								<div class="cta-text">
+									<span><a href="mailto:estudio@pacificaarquitectura.com"></a>estudio@pacificaarquitectura.com</span>
+								</div>
+							</div>
+							<div class="single-cta">
+								<i class="fa fa-instagram"></i>
+								<div class="cta-text">
+									<span><a href="https://www.instagram.com/arq.ezequielgil/"></a>@arq.ezequielgil</span>
+								</div>
 							</div>
 						</div>
-						<!-- <div class="col-xs-12 col-sm-6">
+					</div>
+					<div class="col-xs-12 col-sm-7">
+						<div class="footer-content">
+							<div class="row">
+								<div class="col-xs-12">
+									<div class="footer-widget">
+										<div class="footer-widget-heading">
+											<h3>Sitio</h3>
+										</div>
+										<ul>
+											<li><a href="portfolio.html">Casas</a></li>
+											<li><a href="lifestyle.html">Lifestyle</a></li>
+											<li><a href="desarrollos.html">Desarrollos</a></li>
+											<li><a href="quienesomos.html">Quienes Somos</a></li>
+											<li><a href="estudio.html">Fotos</a></li>
+											<li><a href="interiores.html">Diseño de Interiores</a></li>
+											<li><a href="contacto.html">Contacto</a></li>
+											<li><a href="instagram.html">Instagram</a></li>
+										</ul>
+									</div>
+								</div>
+								<!-- <div class="col-xs-12 col-sm-6">
 								<div class="footer-widget">
 									<div class="footer-widget-heading">
 										<h3>Seguinos</h3>
@@ -448,30 +448,30 @@
 									</div>
 								</div>
 							</div> -->
+							</div>
+						</div>
+					</div>
+
+				</div>
+				<div class="sub-footer">
+					<div class="copyright-text">
+						<p>© Copyright 2019 Pacifica</p>
+					</div>
+					<div class="footer-menu">
+						<ul>
+							<li><a href="index.html">Home</a></li>
+						</ul>
 					</div>
 				</div>
 			</div>
 
-		</div>
-		<div class="sub-footer">
-			<div class="copyright-text">
-				<p>© Copyright 2019 Pacifica</p>
-			</div>
-			<div class="footer-menu">
-				<ul>
-					<li><a href="index.html">Home</a></li>
-				</ul>
-			</div>
-		</div>
-	</div>
+		</footer>
 
-</footer>
 
-		
 
 	</div>
 
-	
+
 
 	<!-- JavaScripts -->
 	<script type='text/javascript' src='js/jquery.min.js'></script>
